--- a/src/StoreToHeaven/AddProduct.form
+++ b/src/StoreToHeaven/AddProduct.form
@@ -29,7 +29,7 @@
           <Font name="TH Sarabun New" size="24" style="0"/>
         </Property>
         <Property name="model" type="javax.swing.ComboBoxModel" editor="org.netbeans.modules.form.editors2.ComboBoxModelEditor">
-          <StringArray count="10">
+          <StringArray count="11">
             <StringItem index="0" value="&#xe01;&#xe23;&#xe38;&#xe13;&#xe32;&#xe40;&#xe25;&#xe37;&#xe2d;&#xe01;&#xe15;&#xe31;&#xe27;&#xe40;&#xe25;&#xe37;&#xe2d;&#xe01;"/>
             <StringItem index="1" value="&#xe42;&#xe25;&#xe07;&#xe28;&#xe1e;"/>
             <StringItem index="2" value="&#xe1e;&#xe27;&#xe07;&#xe2b;&#xe23;&#xe35;&#xe14;"/>
@@ -39,7 +39,8 @@
             <StringItem index="6" value="&#xe0a;&#xe38;&#xe14;&#xe2d;&#xe32;&#xe2b;&#xe32;&#xe23;&#xe27;&#xe48;&#xe32;&#xe07;"/>
             <StringItem index="7" value="&#xe02;&#xe2d;&#xe07;&#xe0a;&#xe33;&#xe23;&#xe48;&#xe27;&#xe22;"/>
             <StringItem index="8" value="&#xe01;&#xe23;&#xe2d;&#xe1a;&#xe23;&#xe39;&#xe1b;"/>
-            <StringItem index="9" value="&#xe40;&#xe1e;&#xe34;&#xe48;&#xe21;&#xe2a;&#xe34;&#xe19;&#xe04;&#xe49;&#xe32;"/>
+            <StringItem index="9" value="&#xe41;&#xe1e;&#xe47;&#xe04;&#xe40;&#xe01;&#xe08;"/>
+            <StringItem index="10" value="&#xe40;&#xe1e;&#xe34;&#xe48;&#xe21;&#xe2a;&#xe34;&#xe19;&#xe04;&#xe49;&#xe32;"/>
           </StringArray>
         </Property>
         <Property name="alignmentX" type="float" value="1.0"/>
@@ -96,7 +97,7 @@
         </Property>
       </Properties>
       <AuxValues>
-        <AuxValue name="JavaCodeGenerator_LayoutCodePre" type="java.lang.String" value="JPanel emptyPanel = new JPanel();&#xa;AddWreath wreath = new AddWreath(showAddProduct);&#xa;AddSnackBox boxset = new AddSnackBox(showAddProduct);&#xa;AddFrame frame = new AddFrame(showAddProduct);&#xa;AddOffering offerings = new AddOffering(showAddProduct);&#xa;AddSandalWood sandalW = new AddSandalWood(showAddProduct);&#xa;AddCandle candle = new AddCandle(showAddProduct);&#xa;AddCoffin coffin = new AddCoffin(showAddProduct);&#xa;AddIncense incense = new AddIncense(showAddProduct);&#xa;AddSouvenir souvenir = new AddSouvenir(showAddProduct);&#xa;&#xa;emptyPanel.setBackground(new java.awt.Color(153, 255, 204)); &#xa;showAddProduct.add(emptyPanel, &quot;empty&quot;);&#xa;showAddProduct.add(wreath, &quot;wreath&quot;);&#xa;showAddProduct.add(boxset, &quot;snackbox&quot;);&#xa;showAddProduct.add(frame, &quot;frame&quot;);&#xa;showAddProduct.add(offerings, &quot;offerings&quot;);&#xa;showAddProduct.add(sandalW, &quot;sandalW&quot;);&#xa;showAddProduct.add(candle, &quot;candle&quot;);&#xa;showAddProduct.add(coffin, &quot;coffin&quot;);&#xa;showAddProduct.add(incense, &quot;incense&quot;);&#xa;showAddProduct.add(souvenir, &quot;souvenir&quot;);"/>
+        <AuxValue name="JavaCodeGenerator_LayoutCodePre" type="java.lang.String" value="JPanel emptyPanel = new JPanel();&#xa;AddWreath wreath = new AddWreath(showAddProduct);&#xa;AddSnackBox boxset = new AddSnackBox(showAddProduct);&#xa;AddFrame frame = new AddFrame(showAddProduct);&#xa;AddOffering offerings = new AddOffering(showAddProduct);&#xa;AddSandalWood sandalW = new AddSandalWood(showAddProduct);&#xa;AddCandle candle = new AddCandle(showAddProduct);&#xa;AddCoffin coffin = new AddCoffin(showAddProduct);&#xa;AddIncense incense = new AddIncense(showAddProduct);&#xa;AddSouvenir souvenir = new AddSouvenir(showAddProduct);&#xa;AddPackage pack = new AddPackage(showAddProduct);&#xa;&#xa;emptyPanel.setBackground(new java.awt.Color(153, 255, 204)); &#xa;showAddProduct.add(emptyPanel, &quot;empty&quot;);&#xa;showAddProduct.add(wreath, &quot;wreath&quot;);&#xa;showAddProduct.add(boxset, &quot;snackbox&quot;);&#xa;showAddProduct.add(frame, &quot;frame&quot;);&#xa;showAddProduct.add(offerings, &quot;offerings&quot;);&#xa;showAddProduct.add(sandalW, &quot;sandalW&quot;);&#xa;showAddProduct.add(candle, &quot;candle&quot;);&#xa;showAddProduct.add(coffin, &quot;coffin&quot;);&#xa;showAddProduct.add(incense, &quot;incense&quot;);&#xa;showAddProduct.add(souvenir, &quot;souvenir&quot;);&#xa;showAddProduct.add(pack, &quot;pack&quot;);"/>
       </AuxValues>
       <Constraints>
         <Constraint layoutClass="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout" value="org.netbeans.modules.form.compat2.layouts.DesignAbsoluteLayout$AbsoluteConstraintsDescription">
